--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
     <header>
     </header>
     <div id="main" role="main">
-      <div id="">
           <div id="fb-root"></div>
           <script>(function(d){
                 var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
@@ -37,8 +36,7 @@
                     js.src = "//connect.facebook.net/en_US/all.js#appId=257336084306298&xfbml=1";
                       d.getElementsByTagName('head')[0].appendChild(js);
           }(document));</script>
-          <div class="fb-like" data-href="http://zombeatdefense.com/" data-send="false" data-width="450" data-show-faces="true"></div>
-      </div>
+      <center>    <div class="fb-like" data-href="http://zombeatdefense.com/" data-send="false" data-width="450" data-show-faces="true"></div></center>
       <div id="cr-stage">
         <div id="intro-page">
           <p><h3>ZomBeat Defense</h3></p>
