Screen flashes red on damage. Increase ghost speed buffs.

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
           <p>Try using a different browser like <a href="http://www.google.com/chrome">Chrome</a> or <a href="http://www.mozilla.org/en-US/firefox/new">Firefox</a></p>
         </div>
         <canvas id="dude-canvas"></canvas>
+        <canvas id="damage-canvas"></canvas>
       </div>
       <div class="strobe"></div>
       <audio id="the-audio" src="data/superbeast.ogg" preload></audio>
